# ChangeLog for dev-lang/ghc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ghc/ChangeLog,v 1.172 2009/12/05 09:19:27 kolmodin Exp $

*ghc-6.10.4-r1 (05 Dec 2009)

  05 Dec 2009; <kolmodin@gentoo.org> +ghc-6.10.4-r1.ebuild,
  +files/ghc-6.10.4-autoconf.patch, +files/ghc-6.10.4-libm-detection.patch:
  Attempt to fix a lot of recent trouble with building ghc-6.10.4;
  * bug #295487, could not build with >=autoconf-2.64;
    patch by int-e, reported by Tobias Hommel <tobi@keksbude.net>
  * bug #292772, add CFLAGS to ghc wrapper enables hardended to build;
    reported and fixed by Zhang, Hongjiu <secludedsage@gmail.com> with the
    help of ivanm, trofi, dcoutts and igloo.
  * bug #293208, undefined reference to `sqrt', libm detection trouble;
    Roie Kerstein and Renato Gallo found and tracked down the bug,
    asuffield suggested the fix and Sergei Trofimovich <slyfox@inbox.ru>
    patched.

  31 Oct 2009; <kolmodin@gentoo.org> -ghc-6.10.2.ebuild, -ghc-6.10.3.ebuild,
  metadata.xml:
  Remove previous ghc versions 6.10.2 and 6.10.3 as 6.10.4 now is unmasked.
  Remove ghcmakebinary USE flag from metadata, it was unused.

  16 Sep 2009; Lennart Kolmodin <kolmodin@gentoo.org> ghc-6.10.4.ebuild,
  +files/ghc-6.10.4-ppc64-always-minimal-toc.patch,
  +files/ghc-6.10.4-propagate-hc-options-to-all-libraries.patch:
  Add blocker on <haddock-2.4.2. Older versions will not work with this
  version of ghc. We add the block in ghc rather than in haddock, as blocks
  can't be trusted to be retroactive.

  Also add ppc64 binary and patches,
  work done by Sergei Trofimovich <slyfox@community.haskell.org>.

  10 Sep 2009; Christian Faulhammer <fauli@gentoo.org> ghc-6.8.2-r1.ebuild:
  stable x86/amd64, bug 283155

  02 Aug 2009; Lennart Kolmodin <kolmodin@gentoo.org> ghc-6.8.2.ebuild:
  Make ppc work in pkg_setup.

  02 Aug 2009; Lennart Kolmodin <kolmodin@gentoo.org> ghc-6.10.4.ebuild: