@@ -17,6 +17,7 @@ DIST ghc-6.10.4-i386-unknown-solaris2.tar.bz2 78409258 RMD160 8595f81eb215437155
 DIST ghc-6.10.4-powerpc-apple-darwin.tar.bz2 116351401 RMD160 29b9906b230d1c4ebe176f892ef18054e3ad33b3 SHA1 e136715f7223121ddd7ddd3f1ade179d5ce57709 SHA256 597cc9f866199a6ccd5f8e2298e777454b20f9dc935eebd1d88b833e37d8d251
 DIST ghc-6.10.4-sparc-sun-solaris2.tar.bz2 87371847 RMD160 6028d2224524c6dfeb7b9b352eeee1b59f077df2 SHA1 dc48c475bce414545b734e27e50433f43a3a1b0c SHA256 bc6fa54fcb66d3d5f14c4bb32bb932a9168040e3e7eb4ef410de7fc18ecd3a38
 DIST ghc-6.10.4-src.tar.bz2 8060565 RMD160 5f83baf2549f1f4bea140c6a80728c2a76f60ab6 SHA1 0566858b409066d98da70de5adb9a7030d0df5dc SHA256 d66a8e52572f4ff819fe5c4e34c6dd1e84a7763e25c3fadcc222453c0bd8534d
+DIST ghc-6.12.1-src.tar.bz2 22543105 RMD160 c5e067f739813421cb07ce6326b2cbe2e14fbdf6 SHA1 dc36df842c931917f322c7fd86e19a4711ba34ea SHA256 cdf99f9add677a925ee87a5b87e94eb595ed9b72034453c195ef9379bd26552a
 DIST ghc-6.6.1-i386-apple-darwin.tar.bz2 41776873 RMD160 c69f0d39b5af496a1dfc65e276b5e5abbfeb03c1 SHA1 16f083e4934bbc387352f1f9e799ff278007a397 SHA256 2af2151d1ddbdd01f9dfe277c556602a6111d7337a13bda7a7d264ab58d42bb7
 DIST ghc-6.6.1-i386-unknown-solaris2.tar.bz2 42261886 RMD160 9e91c51819ed1e1fff3dbd4168805626f1a9c044 SHA1 8bc3ecf73ee7b47468b5280452a918e4d216291b SHA256 3d476bb1963e7a770625e47b125c65a6ba65b278d56258f1055003a863d56939
 DIST ghc-6.6.1-powerpc-apple-darwin.tar.bz2 49468070 RMD160 6bbb5bebe2d1447ad76015cf9f2c87c0fb89a832 SHA1 dc4023bcb563e79e09e57a23ca8f1134fa6643fc SHA256 56fa50cdd73b533d1e1b682c298bd3c082c4b8c740b348717593096158b093d0
@@ -27,6 +28,10 @@ DIST ghc-bin-6.10.4-amd64.tbz2 51566179 RMD160 68b261b4bbef89021a2c92e99c70db45e
 DIST ghc-bin-6.10.4-ppc64.tbz2 67637446 RMD160 ff0bed846e91dcf094142fc6b75f29c9d8521424 SHA1 858406875ade2f1aad8b2ae731bf9ce3fa613f1c SHA256 1ef7d4daf50cc0998651d498d029a5455fb6c410c0abb6a2b23b118ae69e9c54
 DIST ghc-bin-6.10.4-sparc.tbz2 65780774 RMD160 60a431055ce065d2489f2258111e2fb322cd90ec SHA1 bf591efa07e6be805285a800e3832377e303b4f8 SHA256 6ee4d05fb68e622bac960355d928881a2ddd7ce82a10763333e0a8daa93f6d89
 DIST ghc-bin-6.10.4-x86.tbz2 52621494 RMD160 0a0d3aadc20808bb013f4fb6cf8a05145ee679e0 SHA1 0623dad67796306f5088a3bc67d42fc76e2485a7 SHA256 c71589dc7f9866f11a919170dc5e116f50908ac443aff19742c38692e030e98d
+DIST ghc-bin-6.12.1-amd64.tbz2 78462451 RMD160 429e8c1303544c0a5886bd35c8be4ddf0ea10da5 SHA1 3274bda2b98ba1c9180320e7c5ce52545576da53 SHA256 1b8072085391c6e8d955d7e23e4d22535759157f4df7aea4e8a670aee60701be
+DIST ghc-bin-6.12.1-ppc64.tbz2 98031515 RMD160 a0d4beca79987709143c873ff0b7597593662cb2 SHA1 11408812c709411e66bf0ae91123385530338726 SHA256 6b96643d7781ea5aa1a9fcb2ae035a858eb0d714ce1228254b812787e9cef315
+DIST ghc-bin-6.12.1-sparc.tbz2 78900078 RMD160 b77c66ace7146651cb54cd14f263a044584dd533 SHA1 dc15876da0c4ab8de5b293af4443b63b6d53cace SHA256 320b9335aa9c396cdd42281b20c10aa14dcbdcc822332427160a78f34db84689
+DIST ghc-bin-6.12.1-x86.tbz2 82182666 RMD160 4ef08aa170283d86f0b63cd1626cec6d5f98de26 SHA1 abc2ba41ed4b6ddea794d35da11c4ea47defb36f SHA256 7ed1c64dd095bd09967155c2fea377e9baec38a26b7156c3d6257a45c58429ea
 DIST ghc-bin-6.6.1-alpha.tbz2 36740906 RMD160 88d15d55fc6837d57b83be2dab285a3cf23b0e87 SHA1 e019fcb7cf7dbb6069a994e34696945ed6e1f49c SHA256 9637e4c1d1957ef8f0584d9e88278f1dca9db0d13b121f9ebe40a64716a652dd
 DIST ghc-bin-6.6.1-amd64.tbz2 27473156 RMD160 20359587c05ebead0e357d4c217e496f28ae6d5d SHA1 48ba2f6573cba5f76f1578de70defd9210545785 SHA256 f8e1795dd84f64eec0a15ca15cdb3ec08a164790ebe35b3ba2d9743e9dae3b16
 DIST ghc-bin-6.6.1-hppa.tbz2 46904941 RMD160 3107f2023f2bd26f50a3843f1fbf71a4d8db854d SHA1 ee3fbd1fe7c00774fca6949afe7cb7d6ca355fad SHA256 9d1aaf6865542a84d6c79c9a8bfb8ccfc73fb016c3ef6bae3b1b35bf6e8fb723
@@ -47,8 +52,9 @@ DIST ghc-bundled-readline-5.2_p13-amd64.tbz2 976677 RMD160 f0543aa3f404d45aad436
 DIST ghc-bundled-readline-5.2_p13-x86.tbz2 940742 RMD160 5f9470a99047f004bd0917c62253bff9b663c9a5 SHA1 f5463a8929d2ba792b91085f78d6763cb50ef14e SHA256 bb9766235ed0d6e3c2f3ffe1625ecbe8e4d2e0254f7060e845be3a404835cd2a
 EBUILD ghc-6.10.4-r1.ebuild 14925 RMD160 c8fdbdaf97e5fd54c952c8beaa4ee01fe614ce7d SHA1 f1e9b56c90a109b79e47530e51bdc27e5418bba3 SHA256 5b3b3d03df99b58199bf0097d631535b0819320baeb0324ad1f84b86bcfcf7f6
 EBUILD ghc-6.10.4.ebuild 14134 RMD160 270a79900fa4ed18a161ea9bde0bcc28b3f34e0c SHA1 49414e080c551a54da05658146f8a006f53c876b SHA256 13f754edcaa00f3c60d425c211b2b6cd33bad5646391695aac914977fea67d3f
+EBUILD ghc-6.12.1.ebuild 14651 RMD160 cc7c1c98d6047ef169389a2e538fc119e3e278ed SHA1 0f2f300daa356d1be1b7dd695913571b207fdae2 SHA256 6b44905909d96a0e036027ae79edb4964edadd183fc7fc3383a5774082fb8dc7
 EBUILD ghc-6.6.1.ebuild 15748 RMD160 ffcc57357c1380b5487960dcc59fdeac22f0be5a SHA1 fcf4859cf5a659f76123eb40c73d6fc5e6f8eb2a SHA256 bc55c10e4fb5d9dd6f2111d4351a27feca80ead8d5ea8e13ad40e533c5872d8d
 EBUILD ghc-6.8.2-r1.ebuild 10626 RMD160 d6d476b9e4cef2385aa5e75a8a07faae46c0bdf0 SHA1 905c268b9169cc1a2ee6d814003a10eb871cb16c SHA256 f827f4fd7d04ff97ac1226e09308dee6c0daf1595a480d8095bbf673afc1c7f3
 EBUILD ghc-6.8.2.ebuild 10409 RMD160 9c0b8269c8f658459274eb5ed587de84d1b92c46 SHA1 ec911e70aa5c0165e61cf69ee9c4731345ed694c SHA256 1695182cbff019704745ade3593bf385b528687c38bc43fc25b4937e29c9057c
-MISC ChangeLog 29806 RMD160 5edff920020a81aee00d7b1f838ad6e22259ef9e SHA1 dab78b496ffdef77ef85cf260bedb6a6250b28be SHA256 065737e04155a477224bb5652b326447f22ef61e286a3f52b5d39dad0a878a69
+MISC ChangeLog 29937 RMD160 3da25fd1568b6a1d60d9f287098ab06cb61713fa SHA1 4abe9102a33eeb5d5411bb08fbd473ee71f21fdf SHA256 f772557a7045fcb9848a837d5b783b7628327b16d9e5024b17c3e966846a0d07
 MISC metadata.xml 442 RMD160 9cfa0af9084477c8a70ecf0ac3fb3093ae0cd602 SHA1 be2833090f093ac1c8fc2f5c6f3f253bdbdd6b96 SHA256 2bacbdfcaea11289949a687626f59f99af8fda9ec495b2c349ce5898d9f0dcd4
