@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/ghc
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/ghc/ChangeLog,v 1.172 2009/12/05 09:19:27 kolmodin Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/ghc/ChangeLog,v 1.173 2010/01/26 19:54:10 kolmodin Exp $
+
+*ghc-6.12.1 (26 Jan 2010)
+
+  26 Jan 2010; <kolmodin@gentoo.org> +ghc-6.12.1.ebuild:
+  Version bump, currently masked for testing.
 
 *ghc-6.10.4-r1 (05 Dec 2009)
 
